<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="co.uk.bbk.savvysaver.BudgetViewModel" />
        <variable
            name="viewModel"
            type="BudgetViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/TextLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:layout_marginBottom="50dp"
            android:fontFamily="sans-serif-black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/TextLogo"
            app:srcCompat="@mipmap/ic_launcher_foreground" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TextLogo"
            android:layout_margin="30dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@{viewModel.budgetText}"

            />


        <LinearLayout
            android:id="@+id/buttonContainer"
            android:layout_width="match_parent"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@id/TextLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


            <Button
                android:id="@+id/updateBudgetButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BudgetButton"
                android:textColor="@color/black"

                />
            <Button
                android:id="@+id/viewButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ViewButton"
                android:textColor="@color/black"

                />
            <Button
                android:id="@+id/breakdownButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/breakdown_by_category"
                android:textColor="@color/black" />
            <Button
                android:id="@+id/exitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exit_button"
                android:textColor="@color/black" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>