<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="co.uk.bbk.savvysaver.ExpenseViewModel" />
        <import type="co.uk.bbk.savvysaver.BudgetViewModel" />
        <variable
            name="budgetViewModel"
            type="BudgetViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/TextLogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@mipmap/ic_launcher_foreground" />

        <TextView
            android:id="@+id/TextLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="300dp"
            android:fontFamily="sans-serif-black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/budgetView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TextLogo"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@{budgetViewModel.budgetText}"

            />

        <TextView
            android:id="@+id/expensesView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/budgetView"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/expenses_cost"

            />




        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categoryTotalRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/buttonLayout"
            app:layout_constraintTop_toBottomOf="@id/expensesView"
            android:layout_margin="10dp"
            tools:listitem="@layout/item_category_total"
            android:background="@color/orange"
             />

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/breakdownButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/breakdown_by_category"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/addButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AddButton"
                android:textColor="@color/black" />



            <Button
                android:id="@+id/backButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BackButton"
                android:textColor="@color/black" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>